// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/TokenCom render copy token 1`] = `
<body>
  <div>
    <span
      class="css-1sg2lsz"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="rect-border-wrapper css-1iiq8r2"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                fill="#8A8F99"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-txh9fw"
      >
        <div
          aria-label="Copied"
          class="ant-typography-copy ant-typography-copy-success"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="check"
            class="anticon anticon-check"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
              />
            </svg>
          </span>
        </div>
      </span>
    </span>
  </div>
</body>
`;

exports[`lib/TokenCom render hide token 1`] = `
<body>
  <div>
    <span
      class="css-1sg2lsz"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-tooltip-open basic-tooltips-wrapper css-4jbtl9"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="rect-border-wrapper css-1iiq8r2"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                fill="#8A8F99"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-txh9fw"
      >
        <div
          aria-label="Copy"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast css-dev-only-do-not-override-txh9fw ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          role="tooltip"
          style="padding: 0px; border-radius: 10px;"
        >
          <div
            class="css-19kgj31"
          >
            已加密，单击查看详情，再次单击隐藏
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/TokenCom render show token 1`] = `
<body>
  <div>
    <span
      class="css-1sg2lsz"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center ant-tooltip-open basic-tooltips-wrapper css-4jbtl9"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="rect-border-wrapper css-1iiq8r2"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
              style="width: 120px; line-height: 20px;"
            >
              test token text
            </span>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-txh9fw"
      >
        <div
          aria-label="Copy"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast css-dev-only-do-not-override-txh9fw ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          role="tooltip"
          style="padding: 0px; border-radius: 10px;"
        >
          <div
            class="css-19kgj31"
          >
            再次单击隐藏
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
